--- a/src/app/food-catalogue/components/food-catalogue.component.html
+++ b/src/app/food-catalogue/components/food-catalogue.component.html
@@ -1,27 +1,31 @@
 
+
 <div class="restaurant-details">
     <div class="restaurant-header">
-        <h1>{{foodItemResponse.restaurant.name}}</h1>
-        <button class="checkout-button" (click)="onCheckOut()">
-            <i class="fas fa-shopping-cart"></i>
-            Checkout
-        </button>
+      <h1>{{foodItemResponse?.restaurant?.name}}</h1>
+      <button class="checkout-button" (click)="onCheckOut()">
+        <i class="fas fa-shopping-cart"></i>
+        Checkout
+      </button>
     </div>
-    <p>{{foodItemResponse.restaurant.restaurantDescription}}</p>
-
+    <p class="restaurant-description">{{foodItemResponse?.restaurant?.restaurantDescription}}</p>
+  
     <h2>Food Menu</h2>
     <div class="food-list">
-        <div class="food-item" *ngFor="let food of foodItemResponse.foodItemsList">
-            <div class="food-details">
-                <div class="food-name">{{food.itemName}}</div>
-                <div class="food-price">$ {{food.price}}</div>
-            </div>
-            <div class="food-quantity">
-                <button class="minus-button" *ngIf="food.quantity > 0" (click)="decrement(food)">-</button>
-                <div class="quantity-label">{{food.quantity}}</div>
-                <button class="plus-button" (click)="increment(food)">+</button>
-            </div>
+      <div class="food-item" *ngFor="let food of foodItemResponse?.foodItemsList">
+        <div class="food-details">
+          <div class="food-name">{{food.itemName}}</div>
+          <div class="food-price">$ {{food.price}}</div>
         </div>
+        
+        <div class="food-quantity-container">
+          <div class="food-quantity">
+            <button class="quantity-button minus-button" *ngIf="getQuantity(food) > 0" (click)="decrement(food)">-</button>
+            <div class="quantity-label">{{getQuantity(food)}}</div>
+            <button class="quantity-button plus-button" (click)="increment(food)">+</button>
+          </div>
+          <div class="available-quantity">Available: {{food.quantity}}</div>
+        </div>
+      </div>
     </div>
-
-</div>
+  </div>
