--- a/src/app/header/components/header.component.html
+++ b/src/app/header/components/header.component.html
@@ -7,7 +7,7 @@
     </h1>
     <nav class="header-nav">
       <div class="dark-mode-toggle">
-        <mat-icon>{{ isDarkMode ? 'brightness_2' : 'wb_sunny' }}</mat-icon> <!-- Moon and Sun icons -->
+        <mat-icon>{{ isDarkMode ? 'brightness_2' : 'wb_sunny' }}</mat-icon> 
         <label class="switch">
           <input type="checkbox" (change)="toggleDarkMode()" [checked]="isDarkMode">
           <span class="slider round"></span>
